# depict

./: .gitignore  Cargo.toml  README.md  flake.nix
.config/: nextest.toml
.github/workflows/: test.yml
deploy/: flake.nix  main.tf
deploy/cold/: configuration.nix  hardware-configuration.nix
dioxus/: Cargo.toml
dioxus/src/: main.rs
druid/: Cargo.toml
druid/src/: main.rs
licenses/bytemuck/: README.md  changelog.md
licenses/enum-kinds/: README.md
licenses/execute/: README.md
licenses/execute-command-macro/: README.md
licenses/execute-command-macro-impl/: README.md
licenses/execute-command-tokens/: README.md
licenses/intmap/: LICENSE-MIT
licenses/iri-string/: LICENSE-MIT.txt  README.md
licenses/notify/: README.md
licenses/printf-compat/: README.md  README.tpl
licenses/serde-wasm-bindgen/: README.md
licenses/smallstr/: README.md
licenses/sorted-vec/: LICENSE
licenses/soup2/: README.md
licenses/spinning/: README.md
licenses/supports-unicode/: LICENSE
licenses/wasm-logger/: LICENSE  README.md
objc/: Cargo.toml
objc/src/: main.rs
parse/: Cargo.toml
parse/src/: main.rs
resources/i18n/en-US/: builtin.ftl
server/: Cargo.toml
server/src/: main.rs
solvers/: cvx.py  minion.py
src/: dioxus.rs  dot.rs  druid.rs  graph_drawing.rs  lib.rs  objc.rs  parse.rs  server.rs  tikz.rs
tikz/: Cargo.toml
tikz/src/: main.rs
web/: Cargo.toml  index.html
web/src/: main.rs
