[package]
name = "diagrams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["minion", "cvxpy"]
minion = ["ndarray"]
cvxpy = ["numpy", "pyo3"]
dioxus = []
server = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]
client = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]

[dependencies]
derive_more = "0.99"
nom = "7"
petgraph = "0.6"
sorted-vec = "0.7"
thiserror = "1.0"
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
typed-index-collections = "3.0"

# cvxpy
numpy = { version = "0.15", optional = true }
pyo3 = { version = "0.15.1", optional = true }

# minion
ndarray = { version = "0.15", optional = true }

# server
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[lib]
name = "diagrams"
path = "src/lib.rs"