[package]
name = "depict"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Picture systems, tell stories"
documentation = "https://docs.rs/depict"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["minion", "osqp"]
minion = ["ndarray"]
desktop = []
server = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]
client = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]

[dev-dependencies]
proptest = "1"

[dependencies]
derive_more = "0.99"
enum-kinds = "0.5.1"
itertools = "0.10"
logos = "0.12"
petgraph = "0.6"
pomelo = { version = "0.1" }
sorted-vec = "0.7"
thiserror = "1.0"
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
typed-index-collections = "3.0"

# osqp
osqp = { version = "0.6", optional = true }

# minion
ndarray = { version = "0.15", optional = true }

# server
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[lib]
name = "depict"
path = "src/lib.rs"

[workspace]
members = [
  "dioxus",
  "objc",
  "parse",
  "server",
  "tikz",
  "web",
]

[profile.release]
debug = true
