[package]
name = "depict"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Picture systems, tell stories"
documentation = "https://docs.rs/depict"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["osqp-rust"]
desktop = []
server = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]
client = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"

[dependencies]
anyhow = { version = "1" }
colorous = { version = "1" }
derive_more = "0.99"
dioxus = { version = "0.3", optional = true }
enum-kinds = "0.5.1"
include_dir = "0.7"
itertools = "0.10"
logos = "0.12"
ordered-float = "3"
petgraph = "0.6"
pomelo = { version = "0.1" }
self_cell = "0.10.2"
sorted-vec = "0.7"
svg = "0.10"
thiserror = "1.0"
typed-index-collections = "3.0"

# osqp
osqp = { version = "0.6", optional = true }
osqp-rust = { version = "0.6", optional = true, git = "https://github.com/mstone/osqp.rs" }

# server
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[lib]
name = "depict"
path = "src/lib.rs"

[workspace]
members = [
  "dioxus",
  #"objc",
  "parse",
  #"server",
  #"tikz",
  "web",
]

[profile.release]
#debug = 1
debug = true
split-debuginfo = "packed"
#split-debuginfo = "unpacked"
#incremental = true
strip = "none"
