[package]
name = "depict-desktop"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Desktop port of Depict"
documentation = "https://docs.rs/depict-desktop"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
color-spantrace = "0.2"
depict = { path = "..", version = "0.2", default-features = false, features = [ "desktop", "highs", "minion", "osqp" ] }
dioxus = { version = "0.2", features = ["desktop"] }
futures = "0.3"
indoc = "1.0"
Inflector = "0.11"
logos = "0.12"
nom = "7"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = "1"
serde_json = "1"
svg = "0.10"
tao = "0.6"
tokio = { version = "1", features = [ "rt-multi-thread" ] }
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[profile.release]
#debug = 1
debug = true
split-debuginfo = "packed"
#split-debuginfo = "unpacked"
#incremental = true
strip = "none"
