[package]
name = "depict-desktop"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Desktop port of Depict"
documentation = "https://docs.rs/depict-desktop"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
anyhow = "*"
colorous = "*"
depict = { path = "..", version = "0.3", default-features = false, features = [ "desktop", "dioxus", "osqp" ] }
dioxus = { version = "0.3" }
dioxus-desktop = { version = "0.3" }
futures = "0.3"
indoc = "1.0"
logos = "0.12"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = "1"
serde_json = "1"
tao = "0.15"
tokio = { version = "1", features = [ "rt-multi-thread" ] }

[profile.release]
#debug = 1
debug = true
split-debuginfo = "packed"
#split-debuginfo = "unpacked"
#incremental = true
strip = "none"
