[package]
name = "druid"
version = "0.1.0"
edition = "2021"

[dependencies]
diagrams = { path = "..", default-features = false, features = [ "cvxpy", "minion" ] }
druid = { git = "https://github.com/linebender/druid" }
indoc = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
tracing = "0.1"
