[package]
name = "depict-objc"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "objc port of Depict"
documentation = "https://docs.rs/depict-objc"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
block = "0.1.6"
cocoa = "0.24.0"
objc = "0.2.7"
core-graphics = "0.22.0"
foreign-types = "0.3.2"
bitflags = "1.2.1"
