[package]
name = "depict-parse"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "standalone parser for Depict"
documentation = "https://docs.rs/depict-parse"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
depict = { path = "..", version = "0.3", default-features = false, features = ["dioxus", "osqp"] }
logos = "0.12"
miette = { version = "4", features = [ "fancy" ] }
thiserror = "1.0"
walkdir = "2"
