[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
diagrams = { path = "..", default-features = false, features = [ "server", "minion", "cvxpy" ] }
futures = "0.3"
hyper = "0.14"
Inflector = "0.11"
nom = "7"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = "1"
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = [ "rt-multi-thread" ] }
tower-http = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
tracing-subscriber = "0.3"
