[package]
name = "depict-server"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "API server for Depict"
documentation = "https://docs.rs/depict-server"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
axum = "0.4"
depict = { path = "..", version = "0.3", default-features = false, features = [ "server", "osqp" ] }
hyper = "0.14"
Inflector = "0.11"
logos = "0.12"
petgraph = { version = "0.6", features = ["serde-1"] }
serde = "1"
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = [ "rt-multi-thread" ] }
tower-http = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
tracing-subscriber = "0.3"
