[package]
name = "depict-tikz"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tikz port for Depict"
documentation = "https://docs.rs/depict-tikz"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
depict = { version = "0.1", path = "..", default-features = false, features = [ "cvxpy", "minion" ] }
indoc = "1.0"
nom = "7"
petgraph = { version = "0.6" }
rand = "0.8"
