[package]
name = "depict-tikz"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tikz port for Depict"
documentation = "https://docs.rs/depict-tikz"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

[dependencies]
depict = { path = "..", version = "0.1", default-features = false, features = [ "minion", "osqp" ] }
indoc = "1.0"
logos = "0.12"
miette = { version = "4", features = [ "fancy" ] }
petgraph = { version = "0.6" }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-error = { version = "0.2", features = [ "traced-error" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
